RESOLVED FIXED218242
-Wparentheses warning in OptionsList.h
https://bugs.webkit.org/show_bug.cgi?id=218242
Summary -Wparentheses warning in OptionsList.h
Michael Catanzaro
Reported 2020-10-27 09:55:12 PDT
In file included from DerivedSources/JavaScriptCore/unified-sources/UnifiedSource-f2e18ffc-30.cpp:6: ../../Source/JavaScriptCore/runtime/Options.cpp: In static member function ‘static void JSC::Options::recomputeDependentOptions()’: ../../Source/JavaScriptCore/runtime/Options.cpp:539:25: warning: suggest parentheses around arithmetic in operand of ‘|’ [-Wparentheses] 539 | if (!(flags & SupportsDFG)) \ ../../Source/JavaScriptCore/runtime/OptionsList.h:574:5: note: in expansion of macro ‘DISABLE_TIERS’ 574 | v(usePrivateClassFields, SupportsFTL | SupportsDFG, "https://bugs.webkit.org/show_bug.cgi?id=212781", "https://bugs.webkit.org/show_bug.cgi?id=212784") | ^ ../../Source/JavaScriptCore/runtime/Options.cpp:545:9: note: in expansion of macro ‘FOR_EACH_JSC_EXPERIMENTAL_OPTION’ 545 | FOR_EACH_JSC_EXPERIMENTAL_OPTION(DISABLE_TIERS); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ../../Source/JavaScriptCore/runtime/Options.cpp:541:25: warning: suggest parentheses around arithmetic in operand of ‘|’ [-Wparentheses] 541 | if (!(flags & SupportsFTL)) \ ../../Source/JavaScriptCore/runtime/OptionsList.h:574:5: note: in expansion of macro ‘DISABLE_TIERS’ 574 | v(usePrivateClassFields, SupportsFTL | SupportsDFG, "https://bugs.webkit.org/show_bug.cgi?id=212781", "https://bugs.webkit.org/show_bug.cgi?id=212784") | ^ ../../Source/JavaScriptCore/runtime/Options.cpp:545:9: note: in expansion of macro ‘FOR_EACH_JSC_EXPERIMENTAL_OPTION’ 545 | FOR_EACH_JSC_EXPERIMENTAL_OPTION(DISABLE_TIERS); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Attachments
Patch (1.44 KB, patch)
2020-10-27 09:56 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2020-10-27 09:56:26 PDT
EWS
Comment 2 2020-10-27 10:54:49 PDT
Committed r269054: <https://trac.webkit.org/changeset/269054> All reviewed patches have been landed. Closing bug and clearing flags on attachment 412434 [details].
Radar WebKit Bug Importer
Comment 3 2020-10-27 10:55:23 PDT
Note You need to log in before you can comment on or make changes to this bug.