-Wparentheses warning in OptionsList.h https://bugs.webkit.org/show_bug.cgi?id=218242

Unreviewed, fix warning by adding extra parentheses.

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-10-27

* runtime/OptionsList.h:

Canonical link: https://commits.webkit.org/230945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269054 268f45cc-cd09-0410-ab3c-d52691b4dbfc